# CRMFLX

./: .gitignore  README  README.md  crmflx.pyx  pyproject.toml  runcrm.py  setup.py  setup_bowshock.py  setup_locate_region.py
doc/: MODEL_DATA.md  derive_index_offset.ipynb  derive_solar_wind_parameters.ipynb
src/crmflx/: __init__.py  _read_model.py  bowshock.c  bowshock.pxd  bowshock.pyx  core.pyx  locate_region.c  locate_region.pxd  locate_region.pyx  numerical.c  numerical.pxd  numerical.pyx  sector_scaling.pxd  sector_scaling.pyx
src/crmflx/_model_data/: index_offset.json  solar_wind_parameters.json
tests/: _read_model_test.py  conftest.py
